--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -133,6 +133,7 @@
   author={Yang., Wenhan and Gao, Jingdong and Mirzasoleiman, Baharan},
   journal={Advances in Neural Information Processing Systems (NeurIPS)},
   year={2023},
+  code={https://github.com/BigML-CS-UCLA/RoCLIP/},
   poison={true}
 }
 
