--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
   author={Watson, Lauren and Gan, Eric and Dantam, Mohan and Mirzasoleiman, Baharan and Sarkar, Rik},
   journal={arXiv preprint arXiv:2311.06839},
   arxiv={2311.06839},
-  year={Preprints}
+  year={1900}
 }
 
 @article{yang2023safe,
@@ -35,7 +35,7 @@
   author={Xu, Yuetong and Mirzasoleiman, Baharan},
   journal={arXiv preprint arXiv:2306.15848},
   arxiv={2306.15848},
-  year={Preprints}
+  year={1900}
 }
 
 @article{joshi2023spuco,
