--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -94,9 +94,12 @@
   bibtex_show={true},
   abbr={AISTATS},
   title={Data-Efficient Contrastive Multi-Modal Learning: Prioritizing Data Quality Over Quantity},
-  abstract={Contrastive Language-Image Pre-training (CLIP) on large-scale image-caption datasets learns representations that can achieve remarkable zero-shot generalization. However, such models require a massive amount of pre-training data. Improving the quality of the pre-training data has been shown to be much more effective in improving CLIP's performance than increasing its volume. Nevertheless, finding a subset of image-caption pairs that provably generalizes on par with the full data when trained on, has remained an open question. In this work, we propose the first theoretically rigorous data selection method for CLIP. We show that subsets that best preserve the cross-covariance of the images and captions of the full data best preserve CLIP's generalization performance. Our extensive experiments on ConceptualCaptions3M demonstrates that subsets of size 5%-10% found by ClipCov over 150% and 40% the accuracy of the next best baseline on ImageNet and its shifted versions. Moreover, we show that our subset exhibits average relative performance improvement over the next best baseline of nearly 50% across 14 downstream datasets.},
+  abstract={Contrastive Language-Image Pre-training (CLIP) on large-scale image-caption datasets learns representations that can achieve re- markable zero-shot generalization. However, such models require a massive amount of pre-training data. Improving the quality of the pre-training data has been shown to be much more e↵ective in improving CLIP’s performance than increasing its vol- ume. Nevertheless, finding small subsets of training data that provably generalize the best has remained an open question. In this work, we propose the first theo- retically rigorous data selection method for CLIP. We show that subsets that closely preserve the cross-covariance of the im- ages and captions of the full data prov- ably achieve a superior generalization per- formance. Our extensive experiments on ConceptualCaptions3M and ConceptualCap- tions12M demonstrate that subsets found by ClipCov achieve over 2.7x and 1.4x the ac- curacy of the next best baseline on ImageNet and its shifted versions. Moreover, we show that our subsets obtain 1.5x the average ac- curacy across 11 downstream datasets, of the next best baseline. The code is available at: https://github.com/BigML-CS-UCLA/clipcov-data-efficient-clip.},
   author={Joshi, Siddharth and Jain, Arnav and Payani, Ali and Mirzasoleiman, Baharan},
   journal={International Conference on Artificial Intelligence and Statistics (AISTATS)},
+  pdf={joshi24mmcl.pdf},
+  supp={joshi24mmcl_long.pdf},
+  code={https://github.com/BigML-CS-UCLA/clipcov-data-efficient-clip},
   year={2024},
   efficient={true}
 }
