--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -141,6 +141,7 @@
   journal={International Conference on Learning Representations (ICLR)},
   pdf={xue24_projection.pdf},
   supp={xue24_projection_long.pdf},
+  website={https://yihaoxue.github.io/projection-head-project-page/},
   year={2024},
   spurious={true}
 }
