--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -86,6 +86,7 @@
   journal={Conference on Uncertainty in Artificial Intelligence (UAI)},
   arxiv={2208.08003},
   year={2024},
+  award={Spotlight presentation},
   noise={true}
 }
 
